--- a/frontend/src/app/product-details/product-details.component.scss
+++ b/frontend/src/app/product-details/product-details.component.scss
@@ -68,3 +68,18 @@ p {
   padding-left: 13px;
   padding-right: 13px;
 }
+
+.like-button {
+  display: flex ;
+  align-items: center;
+  position: relative ;
+}
+
+.like-counter {
+  font-size: 10px;
+  position: absolute ;
+  bottom: -5px ;
+  right: -5px ;
+  border-radius: 50% ;
+  padding: 2px 6px ;
+}
